# Synapsea

./: .gitignore  README.md  ROADMAP.md  STATUS.md  pyproject.toml  spec.md
prd/: 000-initial-prd.md  001-incremental-performance-watcher.md  002-review-ux-and-deduplication.md  003-apply-file-moves-and-ollama-model-cli.md  004-user-preference-learning-pl.md  005-batch-apply-reject-cli.md  005-textual-tui-workstation-pl.md  006-auto-downloads-bootstrap-segregation.md
tests/: test_milestone_10_review_cli.py  test_milestone_11_review_dedupe.py  test_milestone_12_review_ranking.py  test_milestone_13_apply_moves.py  test_milestone_14_ollama_model_cli.py  test_milestone_15_preference_contracts.py  test_milestone_16_user_preferences_repository.py  test_milestone_17_preference_learning_apply_reject.py  test_milestone_18_preference_scoring.py  test_milestone_19_preferences_cli.py  test_milestone_1_contracts.py  test_milestone_20_preference_e2e.py  test_milestone_21_batch_cli_contract.py  test_milestone_21_tui_foundation.py  test_milestone_22_batch_executor.py  test_milestone_22_tui_dashboard_run.py  test_milestone_23_bootstrap_segregation.py  test_milestone_23_tui_review_screen.py  test_milestone_24_bootstrap_reporting.py  test_milestone_24_tui_batch_actions.py  test_milestone_25_tui_ergonomics.py  test_milestone_2_classification.py  test_milestone_3_clusters.py  test_milestone_4_review_queue.py  test_milestone_5_cli_review.py  test_milestone_6_learning.py  test_milestone_7_incremental.py  test_milestone_8_ai_optimization.py  test_milestone_9_watch.py  test_smoke.py  (+1 more)
(+33 files in other folders)
