[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "synapsea"
version = "0.1.0"
description = "Lokalny system klasyfikacji i ewolucji struktury plikow"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.12.5",
]

[tool.hatch.build.targets.wheel]
packages = ["src/synapsea"]
